--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hi 
+<!DOCTYPE html>
+<html lang="EN">
+  <head>
+    <title>Denis Covaliuc - Front-end Developer</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css?family=Roboto:300,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.min.css">
+  </head>
+  <body>
+    <header class="introduction">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-5">
+            <section class="portrait"><img src="./img/my_photo.jpg">
+              <div class="description">
+                <h1 class="name">Denis Covaliuc</h1>
+                <p class="occupation">Front-End Developer</p>
+              </div>
+            </section>
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-6">
+            <section class="description">
+              <article class="about-me">
+                <h2>About me</h2>
+                <p>I’m 18, live in Moldova, wanna become a fullstack web-developer. I’m studying now. My favorite language is Python. Also now I wanna be a front-end developer...</p>
+              </article>
+              <hr>
+              <article class="info">
+                <ul class="overall-info">
+                  <li><strong>Date of birth:</strong>14/10/1999
+                  </li>
+                  <li><strong>Country:</strong>Moldova
+                  </li>
+                </ul>
+                <ul class="other-info">
+                  <li><strong>VK:</strong><a href="#" target="_blank">@powerslime</a></li>
+                  <li><strong>Telegram:</strong><a href="#" target="_blank">@powerslime</a></li>
+                  <li><strong>GitHub:</strong><a href="#" target="_blank">@powerslime</a></li>
+                  <li><strong>E-Mail:</strong><a href="#" target="_blank">powerslime@ya.ru</a></li>
+                </ul>
+              </article>
+            </section>
+          </div>
+        </div>
+      </div>
+    </header>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <!--[if IE]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </body>
+</html>
