Added Languages and Education block

--- a/index.html
+++ b/index.html
@@ -49,6 +49,72 @@
         </div>
       </div>
     </header>
+    <div class="container padding-50-on-top">
+      <div class="row">
+        <div class="col-md-6 languages-block">
+          <h2>Languages</h2>
+          <section class="container languages-container container-with-no-padding">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="language">
+                  <div class="lang">English</div>
+                  <div class="lang-progress">3/5</div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="language">
+                  <div class="lang">Romanian</div>
+                  <div class="lang-progress">3/5</div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="language">
+                  <div class="lang">Russian</div>
+                  <div class="lang-progress">5/5</div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <article>
+                  <p>
+                    Russian is my native language. English is “language of work”, also I like it so
+                    much. Romanian a bit harder for me than English, only because I don’t use
+                    it so much as English...
+                  </p>
+                  <p>
+                    Wanna know English as good as Russian. It will give me a possibility to speak
+                    easier with other people.
+                    
+                  </p>
+                </article>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="col-md-6 education-block text-align-to-right">
+          <h2>Education</h2>
+          <div class="container education-container container-with-no-padding">
+            <div class="row">
+              <div class="col">
+                <article>
+                  <ul class="school">
+                    <li class="date">01/09/2015</li>
+                    <li class="name">Colegiul Politehnic</li>
+                    <li class="place">Balti, Moldova</li>
+                  </ul>
+                  <ul class="school">
+                    <li class="date">01/09/2006 - 31/05/2015</li>
+                    <li class="name">Liceum A. S. Puskin</li>
+                    <li class="place">Falesti, Moldova</li>
+                  </ul>
+                </article>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
