Added skills and interests

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="EN">
   <head>
-    <title>Denis Covaliuc - Front-end Developer</title>
+    <title>Denis Covaliuc - Student</title>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
             <section class="portrait"><img src="./img/my_photo.jpg">
               <div class="description">
                 <h1 class="name">Denis Covaliuc</h1>
-                <p class="occupation">Front-End Developer</p>
+                <p class="occupation">Student</p>
               </div>
             </section>
           </div>
@@ -94,7 +94,7 @@
         </div>
         <div class="col-md-6 education-block text-align-to-right">
           <h2>Education</h2>
-          <div class="container education-container container-with-no-padding">
+          <section class="container education-container container-with-no-padding">
             <div class="row">
               <div class="col">
                 <article>
@@ -111,6 +111,172 @@
                 </article>
               </div>
             </div>
+          </section>
+        </div>
+      </div>
+    </div>
+    <div class="container padding-50-on-top">
+      <div class="row">
+        <div class="col-md-6 skills-block">
+          <h2>Skills</h2>
+          <section class="container skills-container container-with-no-padding"></section>
+          <div class="row">
+            <div class="col-md-12">
+              <table class="skills-table">
+                <tr>
+                  <td class="skill">Python</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">HTML/CSS</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">Bootstrap</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">jQuery</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">JavaScript</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+              <table class="skills-table">
+                <tr>
+                  <td class="skill">Git</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">Jade</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">SASS</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+              <table class="skills-table">
+                <tr>
+                  <td class="skill">StackOverflow</td>
+                  <td class="rating_row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 interests-block text-align-to-right">
+          <h2>Interests</h2>
+          <section class="container interests-container container-with-no-padding"></section>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="custom-flex">
+                <ul class="interests-list">
+                  <li class="item">
+                    <div class="item-container magic">
+                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Click ^_^" style="opacity: 0" class="image"/>
+                      </div>
+                      <p data-custom-text="Anime" class="title">Click ^_^</p>
+                    </div>
+                  </li>
+                  <li class="item">
+                    <div class="item-container">
+                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Photography" class="image"/>
+                      </div>
+                      <p class="title">Photography</p>
+                    </div>
+                  </li>
+                  <li class="item">
+                    <div class="item-container">
+                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Design" class="image"/>
+                      </div>
+                      <p class="title">Design</p>
+                    </div>
+                  </li>
+                  <li class="item">
+                    <div class="item-container">
+                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Programming" class="image"/>
+                      </div>
+                      <p class="title">Programming</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -118,6 +284,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="./show-magic.js"></script>
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
