Added other sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-5">
-            <section class="portrait"><img src="./img/my_photo.jpg">
+            <section class="portrait"><img src="./img/my_photo.jpg" class="img-fluid">
               <div class="description">
                 <h1 class="name">Denis Covaliuc</h1>
                 <p class="occupation">Student</p>
@@ -27,7 +27,7 @@
             <section class="description">
               <article class="about-me">
                 <h2>About me</h2>
-                <p>I’m 18, live in Moldova, wanna become a fullstack web-developer. I’m studying now. My favorite language is Python. Also now I wanna be a front-end developer...</p>
+                <p>I’m 18, live in Moldova, I want to become a fullstack web-developer. I’m studying now. My favorite language is Python. Also now I wanna be a front-end developer...</p>
               </article>
               <hr>
               <article class="info">
@@ -38,10 +38,10 @@
                   </li>
                 </ul>
                 <ul class="other-info">
-                  <li><strong>VK:</strong><a href="#" target="_blank">@powerslime</a></li>
-                  <li><strong>Telegram:</strong><a href="#" target="_blank">@powerslime</a></li>
-                  <li><strong>GitHub:</strong><a href="#" target="_blank">@powerslime</a></li>
-                  <li><strong>E-Mail:</strong><a href="#" target="_blank">powerslime@ya.ru</a></li>
+                  <li><strong>VK:</strong><a href="https://vk.com/powerslime" target="_blank">@powerslime</a></li>
+                  <li><strong>Telegram:</strong><a href="https://t.me/powerslime" target="_blank">@powerslime</a></li>
+                  <li><strong>GitHub:</strong><a href="https://github.com/PowerSlime" target="_blank">@powerslime</a></li>
+                  <li><strong>E-Mail:</strong><a href="mailto:powerslime@ya.ru">powerslime@ya.ru</a></li>
                 </ul>
               </article>
             </section>
@@ -55,19 +55,19 @@
           <h2>Languages</h2>
           <section class="container languages-container container-with-no-padding">
             <div class="row">
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-3 col-3">
                 <div class="language">
                   <div class="lang">English</div>
                   <div class="lang-progress">3/5</div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-3 col-3">
                 <div class="language">
                   <div class="lang">Romanian</div>
                   <div class="lang-progress">3/5</div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-3 col-3">
                 <div class="language">
                   <div class="lang">Russian</div>
                   <div class="lang-progress">5/5</div>
@@ -79,11 +79,11 @@
                 <article>
                   <p>
                     Russian is my native language. English is “language of work”, also I like it so
-                    much. Romanian a bit harder for me than English, only because I don’t use
+                    much. Romanian for me is a bit harder than English, only because I don’t use
                     it so much as English...
                   </p>
                   <p>
-                    Wanna know English as good as Russian. It will give me a possibility to speak
+                    I want to know English as good as Russian. It will give me a possibility to speak
                     easier with other people.
                     
                   </p>
@@ -277,6 +277,43 @@
                 </ul>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container padding-50-on-top">
+      <div class="row justify-content-center">
+        <h2>Projects</h2>
+      </div>
+      <div class="row projects-row">
+        <div class="col-md-4">
+          <div class="project-container">
+            <div class="image-container"><a href="#" target="_blank"><img src="https://placehold.it/1920x1080" class="img-fluid"/></a></div>
+            <p class="title">Sample one</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project-container">
+            <div class="image-container"><a href="#" target="_blank"><img src="https://placehold.it/1920x1080" class="img-fluid"/></a></div>
+            <p class="title">Sample two</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project-container">
+            <div class="image-container"><a href="#" target="_blank"><img src="https://placehold.it/1920x1080" class="img-fluid"/></a></div>
+            <p class="title">Sample three</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-container">
+      <div class="container">
+        <div class="row footer">
+          <div class="col-md-12">
+            <p class="text">
+              Designed by <a href='https://github.com/PowerSlime', target='_blank'>me</a>.
+              You can see all the sources <a href='https://github.com/PowerSlime/powerslime.github.io', target='_blank'>here</a>.
+            </p>
           </div>
         </div>
       </div>
