--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css?family=Roboto:300,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css">
   </head>
   <body>
     <header class="introduction">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-5">
-            <section class="portrait"><img src="./img/my_photo.jpg" class="img-fluid">
+            <section class="portrait"><a href="./img/my_photo.jpg" data-fancybox="gallery"><img src="./img/my_photo.jpg"></a>
               <div class="description">
                 <h1 class="name">Denis Covaliuc</h1>
                 <p class="occupation">Student</p>
@@ -55,19 +56,19 @@
           <h2>Languages</h2>
           <section class="container languages-container container-with-no-padding">
             <div class="row">
-              <div class="col-md-3 col-sm-3 col-3">
+              <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4 col-4">
                 <div class="language">
                   <div class="lang">English</div>
                   <div class="lang-progress">3/5</div>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-3">
+              <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4 col-4">
                 <div class="language">
                   <div class="lang">Romanian</div>
                   <div class="lang-progress">3/5</div>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-3">
+              <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4 col-4">
                 <div class="language">
                   <div class="lang">Russian</div>
                   <div class="lang-progress">5/5</div>
@@ -80,7 +81,7 @@
                   <p>
                     Russian is my native language. English is “language of work”, also I like it so
                     much. Romanian for me is a bit harder than English, only because I don’t use
-                    it so much as English...
+                    it so much...
                   </p>
                   <p>
                     I want to know English as good as Russian. It will give me a possibility to speak
@@ -318,9 +319,8 @@
         </div>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <script src="./show-magic.js"></script>
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
