Mobile-friendly interests block

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <div class="col-md-12">
             <p class="text">
               Designed by <a href='https://github.com/PowerSlime', target='_blank'>me</a>.
-              You can see all the sources <a href='https://github.com/PowerSlime/powerslime.github.io', target='_blank'>here</a>.
+              You can check all the sources <a href='https://github.com/PowerSlime/powerslime.github.io', target='_blank'>here</a>.
             </p>
           </div>
         </div>
