--- a/index.html
+++ b/index.html
@@ -249,28 +249,28 @@
                 <ul class="interests-list">
                   <li class="item">
                     <div class="item-container magic">
-                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Click ^_^" style="opacity: 0" class="image"/>
+                      <div class="image-container"><img src="./img/magic.jpg" alt="Click ^_^" style="opacity: 0" class="image"/>
                       </div>
                       <p data-custom-text="Anime" class="title">Click ^_^</p>
                     </div>
                   </li>
                   <li class="item">
                     <div class="item-container">
-                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Photography" class="image"/>
+                      <div class="image-container"><img src="./img/photography.jpg" alt="Photography" class="image"/>
                       </div>
                       <p class="title">Photography</p>
                     </div>
                   </li>
                   <li class="item">
                     <div class="item-container">
-                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Design" class="image"/>
+                      <div class="image-container"><img src="./img/design.jpg" alt="Design" class="image"/>
                       </div>
                       <p class="title">Design</p>
                     </div>
                   </li>
                   <li class="item">
                     <div class="item-container">
-                      <div class="image-container"><img src="https://placehold.it/100x100" alt="Programming" class="image"/>
+                      <div class="image-container"><img src="./img/programming.jpg" alt="Programming" class="image"/>
                       </div>
                       <p class="title">Programming</p>
                     </div>
@@ -289,20 +289,20 @@
       <div class="row projects-row">
         <div class="col-md-4">
           <div class="project-container">
-            <div class="image-container"><a href="#" target="_blank"><img src="https://placehold.it/1920x1080" class="img-fluid"/></a></div>
-            <p class="title">Sample one</p>
+            <div class="image-container"><a href="//powerslime.github.io/template_mihaela_dreglea_art/" target="_blank"><img src="./img/artist_template.jpg" class="img-fluid"/></a></div>
+            <p class="title">Artist template</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="project-container">
-            <div class="image-container"><a href="#" target="_blank"><img src="https://placehold.it/1920x1080" class="img-fluid"/></a></div>
-            <p class="title">Sample two</p>
+            <div class="image-container"><a href="//github.com/PowerSlime/starter_template" target="_blank"><img src="./img/starter_template.jpg" class="img-fluid"/></a></div>
+            <p class="title">Starter template</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="project-container">
-            <div class="image-container"><a href="#" target="_blank"><img src="https://placehold.it/1920x1080" class="img-fluid"/></a></div>
-            <p class="title">Sample three</p>
+            <div class="image-container"><a href="//powerslime.github.io" target="_blank"><img src="./img/powerslime.github.io.jpg" class="img-fluid"/></a></div>
+            <p class="title">This page</p>
           </div>
         </div>
       </div>
