Deleted one senstence in header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="description">
               <article class="about-me">
                 <h2>About me</h2>
-                <p>I’m 18, live in Moldova, I want to become a fullstack web-developer. I’m studying now. My favorite language is Python. Also now I wanna be a front-end developer...</p>
+                <p>I’m 18, live in Moldova, I want to become a fullstack web-developer. My favorite language is Python. Also now I wanna be a front-end developer...</p>
               </article>
               <hr>
               <article class="info">
