Link changed to github repository

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-container">
-            <div class="image-container"><a href="//powerslime.github.io" target="_blank"><img src="./img/powerslime.github.io.jpg" class="img-fluid"/></a></div>
+            <div class="image-container"><a href="//github.com/PowerSlime/powerslime.github.io" target="_blank"><img src="./img/powerslime.github.io.jpg" class="img-fluid"/></a></div>
             <p class="title">This page</p>
           </div>
         </div>
