A bit of cleaning

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css?family=Roboto:300,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
     <header class="introduction">
@@ -126,7 +126,7 @@
               <table class="skills-table">
                 <tr>
                   <td class="skill">Python</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -138,7 +138,7 @@
                 </tr>
                 <tr>
                   <td class="skill">HTML/CSS</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -150,7 +150,7 @@
                 </tr>
                 <tr>
                   <td class="skill">Bootstrap</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -162,7 +162,7 @@
                 </tr>
                 <tr>
                   <td class="skill">jQuery</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -174,7 +174,7 @@
                 </tr>
                 <tr>
                   <td class="skill">JavaScript</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -188,7 +188,7 @@
               <table class="skills-table">
                 <tr>
                   <td class="skill">Git</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -200,7 +200,7 @@
                 </tr>
                 <tr>
                   <td class="skill">Jade</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -212,7 +212,7 @@
                 </tr>
                 <tr>
                   <td class="skill">SASS</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
@@ -226,7 +226,7 @@
               <table class="skills-table">
                 <tr>
                   <td class="skill">StackOverflow</td>
-                  <td class="rating_row">
+                  <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
